fix: Improve restaurant detail spacing on large displays

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -384,7 +384,7 @@ nav h1 a {
 @media screen and (min-width: 768px) {
   .restaurant-container {
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .inside .restaurant-img-cuisine,
